# machupicchu-ticket-statistics

./: .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt  run.sh
backend/: main.py
backend/db/: session.py
backend/models/: availability.py
backend/services/: crawler.py
docs/: plan.md  prd.md
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/components/: Dashboard.jsx  TicketChart.jsx
tools/: seed_data.py
