[tool.poetry]
name = "machupicchu-monitor"
version = "0.1.0"
description = "Machu Picchu Ticket Availability Monitoring System"
authors = ["Jesse <jesse@example.com>"]
readme = "README.md"
packages = [{include = "backend"}]

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "0.128.8"
uvicorn = "0.39.0"
sqlmodel = "0.0.34"
sqlalchemy = "2.0.48"
apscheduler = "3.11.2"
playwright = "1.58.0"
httpx = "0.28.1"
beautifulsoup4 = "4.14.3"
loguru = "0.7.2"
python-multipart = "0.0.9"

[tool.poetry.group.dev.dependencies]
mypy = "^1.9.0"
pylint = "^3.1.0"
ruff = "^0.3.0"
poethepoet = "^0.25.0"

[tool.poe.tasks]
lint = "ruff check backend"
typecheck = "mypy backend"
pylint = "pylint backend"
check = ["lint", "typecheck", "pylint"]

[tool.ruff]
line-length = 120
target-version = "py310"

[tool.mypy]
ignore_missing_imports = true
strict = false

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
